Adjust config files to support service discover

--- a/accounts.yml
+++ b/accounts.yml
@@ -28,11 +28,29 @@ spring:
     init:
       mode: always
 
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8080/eureka/
+
+info:
+  app:
+    name: 'accounts'
+    description: 'EzBank Accounts Application'
+    version: 0.0.1
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  info:
+    env:
+      enabled: true
   health:
     readiness-state:
       enabled: true
@@ -42,3 +60,5 @@ management:
     health:
       probes:
         enabled: true
+    shutdown:
+      access: unrestricted
