--- a/cards.yml
+++ b/cards.yml
@@ -1,6 +1,7 @@
 author:
   name: Eliezer Oliveira
   email: eliezerreis@gmail.com
+
 server:
   port: 8091
 spring:
@@ -27,11 +28,29 @@ spring:
     init:
       mode: always
 
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8080/eureka/
+
+info:
+  app:
+    name: 'cards'
+    description: 'EzBank Cards Application'
+    version: 0.0.1
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  info:
+    env:
+      enabled: true
   health:
     readiness-state:
       enabled: true
@@ -41,3 +60,5 @@ management:
     health:
       probes:
         enabled: true
+    shutdown:
+      access: unrestricted
