--- a/accounts.yml
+++ b/accounts.yml
@@ -6,7 +6,7 @@ server:
   port: 8090
 spring:
   application:
-    name: Accounts
+    name: accounts
   profiles:
     active: default
   datasource:
