--- a/apigateway.yml
+++ b/apigateway.yml
@@ -6,17 +6,24 @@ server:
   port: 8080
 
 spring:
-  could:
+  cloud:
     gateway:
       discovery:
         locator:
-          enabled: true
+          enabled: false
+          lowerCaseServiceId: true
 
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  endpoint:
+    health:
+      probes:
+        enabled: true
+    gateway:
+      access: unrestricted
   info:
     env:
       enabled: true
@@ -25,15 +32,15 @@ management:
       enabled: true
     liveness-state:
       enabled: true
-  endpoint:
-    health:
-      probes:
-        enabled: true
-    gateway:
-      access: unrestricted
 
 info:
   app:
     name: 'apigateway'
     description: 'API Gateway'
     version: 0.0.1
+
+logging:
+  level:
+    com:
+      eazybytes:
+        gatewayserver: DEBUG
