--- a/apigateway.yml
+++ b/apigateway.yml
@@ -8,6 +8,12 @@ server:
 spring:
   application:
     name: apigateway
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lowerCaseServiceId: true
 
 eureka:
   instance:
