--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -12,4 +12,4 @@ eureka:
     fetchRegistry: false
     registerWithEureka: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: "http://${eureka.instance.hostname}:${server.port}/eureka/"
