--- a/accounts.yml
+++ b/accounts.yml
@@ -4,9 +4,10 @@ author:
 
 server:
   port: 8090
+
 spring:
   application:
-    name: accounts
+    name: "accounts"
   profiles:
     active: default
   datasource:
@@ -35,12 +36,12 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8081/eureka/
+      defaultZone: "http://localhost:8081/eureka/"
 
 info:
   app:
-    name: 'accounts'
-    description: 'EzBank Accounts Application'
+    name: "accounts"
+    description: "EzBank Accounts Application"
     version: 0.0.1
 
 management:
@@ -48,9 +49,6 @@ management:
     web:
       exposure:
         include: "*"
-  info:
-    env:
-      enabled: true
   health:
     readiness-state:
       enabled: true
@@ -62,3 +60,6 @@ management:
         enabled: true
     shutdown:
       access: unrestricted
+  info:
+    env:
+      enabled: true
