--- a/loans.yml
+++ b/loans.yml
@@ -6,7 +6,7 @@ server:
   port: 8092
 spring:
   application:
-    name: loans
+    name: "loans"
   profile:
     active: default
   datasource:
@@ -35,11 +35,11 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8081/eureka/
+      defaultZone: "http://localhost:8081/eureka/"
   info:
     app:
-      name: 'loans'
-      description: 'EzBank Loans Application'
+      name: "loans"
+      description: "EzBank Loans Application"
       version: 0.0.1
 
 management:
@@ -47,9 +47,6 @@ management:
     web:
       exposure:
         include: "*"
-  info:
-    env:
-      enabled: true
   health:
     readiness-state:
       enabled: true
@@ -59,4 +56,8 @@ management:
     health:
       probes:
         enabled: true
-    shutdown: unrestricted
+    shutdown:
+      access: unrestricted
+  info:
+    env:
+      enabled: true
