--- a/apigateway.yml
+++ b/apigateway.yml
@@ -29,16 +29,8 @@ management:
     web:
       exposure:
         include: "*"
-  health:
-    readiness-state:
-      enabled: true
-    liveness-state:
-      enabled: true
   endpoint:
-    health:
-      probes:
-        enabled: true
-    shutdown:
+    gateway:
       access: unrestricted
   info:
     env:
