--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -13,3 +13,12 @@ eureka:
     registerWithEureka: false
     serviceUrl:
       defaultZone: "http://${eureka.instance.hostname}:${server.port}/eureka/"
+
+management:
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
