--- a/accounts.yml
+++ b/accounts.yml
@@ -2,6 +2,12 @@ author:
   name: Eliezer Oliveira
   email: eliezerreis@gmail.com
 
+info:
+  app:
+    name: "accounts"
+    description: "EzBank Accounts Application"
+    version: 0.0.1
+
 server:
   port: 8090
 
@@ -62,9 +68,7 @@ spring:
     port: 5672
     username: guest
     password: guest
-    connection-timeout: 10s
-
-
+    connection-timeout: 20s
 
 eureka:
   instance:
@@ -74,12 +78,6 @@ eureka:
     registerWithEureka: true
     serviceUrl:
       defaultZone: "http://localhost:8081/eureka/"
-
-info:
-  app:
-    name: "accounts"
-    description: "EzBank Accounts Application"
-    version: 0.0.1
 
 management:
   endpoints:
@@ -100,3 +98,10 @@ management:
   info:
     env:
       enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
